clear cart impl called in service